# MF-Site-Chrome

./: .gitignore  README.md  SECURITY.md  install-site-chrome.sh
Generar Footer.app/Contents/: Info.plist
Generar Footer.app/Contents/MacOS/: launcher
backend/collective.sitechrome/: README.md  pyproject.toml
backend/collective.sitechrome/src/collective/sitechrome/: __init__.py  configure.zcml  setuphandlers.py
backend/collective.sitechrome/src/collective/sitechrome/profiles/default/: registry.xml
backend/collective.sitechrome/src/collective/sitechrome/services/: configure.zcml  sanitizers.py  site_chrome.py
backend/collective.sitechrome/src/collective/sitechrome/viewlets/: configure.zcml  site_chrome_viewlet.pt  site_chrome_viewlet.py
backend/collective.sitechrome/tests/: test_sanitizers.py
src/backend/: restapi_configure.zcml  site_chrome.py  site_chrome_viewlet.py  viewlet_configure.zcml
src/frontend/: Footer.css  Footer.jsx  Navigation.css  Navigation.jsx  SiteChromeControlPanel.css  SiteChromeControlPanel.jsx  index.ts.template  siteChromeSSR.js
tools/: bloc2footer.py  bloc2footer_gui.py
