[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collective.sitechrome"
version = "1.0.0"
description = "Site Chrome (header + footer) manager for Plone/Volto — CSS sin rebuild"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-only"
dependencies = [
    "Products.CMFPlone",
    "plone.api",
    "plone.restapi",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.entry-points."z3c.autoinclude.plugin"]
target = "plone"

[tool.hatch.build.targets.wheel]
packages = ["src/collective"]
